--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "dev:ssr": "ng run qrReaderService:serve-ssr",
+    "serve:ssr": "node dist/qrReaderService/server/main.js",
+    "build:ssr": "ng build && ng run qrReaderService:server",
+    "prerender": "ng run qrReaderService:prerender",
+    "start:heroku": "node dist/server",
+    "postinstall": "npm run build:ssr"
   },
   "private": true,
   "dependencies": {
@@ -17,7 +23,11 @@
     "@angular/forms": "~13.0.0",
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
+    "@angular/platform-server": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "@nguniversal/express-engine": "^13.0.1",
+    "express": "^4.17.1",
+    "qrcode-decoder": "^0.2.2",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -26,6 +36,8 @@
     "@angular-devkit/build-angular": "~13.0.3",
     "@angular/cli": "~13.0.3",
     "@angular/compiler-cli": "~13.0.0",
+    "@nguniversal/builders": "^13.0.1",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.10.0",
